--- a/JenkinsFile
+++ b/JenkinsFile
@@ -11,7 +11,7 @@ pipeline {
         stage('Build') {
             steps {
                 echo 'Building the code...'
-                //sh 'mvn clean install' //  Placeholder for Maven build command
+                //sh 'mvn clean install' //  Placeholder for Maven build command test
             }
         }
         
