--- a/JenkinsFile
+++ b/JenkinsFile
@@ -11,7 +11,7 @@ pipeline {
         stage('Build') {
             steps {
                 echo 'Building the code...'
-                //sh 'mvn clean install' //  Placeholder for Maven build command test
+                //sh 'mvn clean install' // Placeholder for Maven build command test
             }
         }
         
@@ -22,19 +22,20 @@ pipeline {
                 echo 'Running integration tests...'
                 //sh 'mvn integration-test' // Placeholder for running integration tests
             }
-    post {
+            
+            post {
                 success {
                     // Send email notification on test success
                     emailext body: "Test Stage: Success\n\nPlease find attached test logs.",
                              subject: "Pipeline Test Status: Success",
-                         to: 'rahul46p@gmail.com'
+                             to: 'rahul46p@gmail.com',
                              attachmentsPattern: "*.log"
                 }
                 failure {
                     // Send email notification on test failure
                     emailext body: "Test Stage: Failure\n\nPlease find attached test logs.",
                              subject: "Pipeline Test Status: Failure",
-                         to: 'rahul46p@gmail.com'
+                             to: 'rahul46p@gmail.com',
                              attachmentsPattern: "*.log"
                 }
             }
@@ -43,7 +44,7 @@ pipeline {
         stage('Code Analysis') {
             steps {
                 echo 'Analyzing code...'
-                //sh 'sonar-scanner' //  Placeholder for SonarQube code analysis
+                //sh 'sonar-scanner' // Placeholder for SonarQube code analysis
             }
         }
         
@@ -52,19 +53,20 @@ pipeline {
                 echo 'Performing security scan...'
                 //sh 'owasp-zap -scan' // Placeholder for OWASP ZAP security scan
             }
- post {
+            
+            post {
                 success {
                     // Send email notification on security scan success
                     emailext body: "Security Scan Stage: Success\n\nPlease find attached security scan logs.",
                              subject: "Pipeline Security Scan Status: Success",
-                              to: 'rahul46p@gmail.com'
+                             to: 'rahul46p@gmail.com',
                              attachmentsPattern: "*.log"
                 }
                 failure {
                     // Send email notification on security scan failure
                     emailext body: "Security Scan Stage: Failure\n\nPlease find attached security scan logs.",
                              subject: "Pipeline Security Scan Status: Failure",
-                              to: 'rahul46p@gmail.com'
+                             to: 'rahul46p@gmail.com',
                              attachmentsPattern: "*.log"
                 }
             }
